examples/datalog/18_advanced_patterns/21_rank.dl
% Test: Rank/dense rank simulation
% Expected: Can compute rank-like values
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_rank
.kg use test_rank

+scores[(1, 95), (2, 87), (3, 95), (4, 72), (5, 87)].

% Count of distinct higher scores (0-based rank)
rank(Id, Score, <COUNT:OtherScore>) :- scores(Id, Score), scores(_, OtherScore), OtherScore > Score.

?- rank(Id, Score, Rank).

% Count how many have same or higher score
dense_rank(Id, Score, <COUNT:OtherScore>) :- scores(Id, Score), scores(_, OtherScore), OtherScore >= Score.

?- dense_rank(Id, Score, Rank).

.kg use default
.kg drop test_rank
